SONAR-18534 Support filter=displayName eq "displayName"